--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18"
   }
 }
